tests/errors/dreal_arg_error.f90
program dreal_arg_error 
    complex :: a
    a = (1.0, 2.0)
    print *, dreal(a)
end program